# BF42tripplus

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: windows-build-msvc.yml
src/: bfhook.cpp  debug.cpp  dllmain.cpp  loader.cpp  pch.h  settings.cpp  util.h
src/bf/: generic.cpp  ui.cpp
